--- a/Pages/Agendamento.html
+++ b/Pages/Agendamento.html
@@ -52,11 +52,15 @@
       <div class="col">
         <div class="p-3">
           <div class="card" id="Form2">
-            <h5 class="card-header" id="header">Carrinho</h5>
+            <h5 class="card-header" id="header">Detalhes</h5>
             <div class="card-body">
-
-              <a href="#" class="btn btn-primary" id="btn3">Continuar</a>
+              <p class="info-service" id="info_services">Informações do serviço:</p>
+              <p id="service"></p>
+              <p id="service-data"></p>
+              <p id="service-hora"></p>
+              <a href="https://wa.me/5579991212965" target="_blank" class="btn btn-primary" id="btn3">Agendar</a>
             </div>
+
           </div>
         </div>
       </div>
@@ -66,7 +70,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-
+  <script src="/js/lavagemsimplem.js"></script>
+  <script src="/js/agendamento.js"></script>
+  <script src="/js/dataehora.js"></script>
 
 </body>
 
