--- a/Pages/Cadastro.html
+++ b/Pages/Cadastro.html
@@ -9,6 +9,7 @@
   <link href="../Style/styleCdastro.css" rel="stylesheet">
   <title>Cadastro</title>
 </head>
+
 <body class="body">
   <nav class="navbar navbar-expand-lg " id="Nav">
     <div class="container-fluid">
@@ -34,15 +35,14 @@
   <form class="row g-3 needs-validation" id="Form">
     <div class="col-md-6" id="label">
       <label for="nome" class="form-label">Nome</label>
-      <input type="text" class="form-control" name="nome" id="nome" placeholder="Erik Rafael" maxlength="20"
-        required>
+      <input type="text" class="form-control" name="nome" id="nome" placeholder="Erik Rafael" maxlength="20" required>
       <br>
       <label for="cpf" class="form-label">Número de Telefone</label>
-      <input type="number" class="form-control" name="numTelefone" id="numTelefone" placeholder="Ex. 79999685200" maxlength="11"
-        pattern="[0-9]{11}" required>
+      <input type="number" class="form-control" name="numTelefone" id="numTelefone" placeholder="Ex. 79999685200"
+        maxlength="11" pattern="[0-9]{11}" required>
       <br>
       <label for="cpf" class="form-label">Email</label>
-      <input type="password" class="form-control" name="emaill" id="email" placeholder="nome@gmail.com" maxlength="11" 
+      <input type="email" class="form-control" name="emaill" id="email" placeholder="nome@gmail.com" maxlength="50"
         required>
       <br>
       <label for="cpf" class="form-label">Senha</label>
@@ -56,9 +56,9 @@
       <button class="btn btn-outline-dark" type="submit" id="btn2">Cadastrar</button>
     </div>
   </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
