--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -45,7 +45,7 @@
         seu veículo de forma simplificada.
     </div>
   </div>
-  <div class="Service">
+  <!-- <div class="Service">
     <h2 id="Title2">Agende já seu Serviço</h2>
     <br>
     <br>
@@ -55,10 +55,10 @@
           <div class="card" style="width: 18rem;">
             <img src="../Assets/i1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Lavagem Simples</h5>
+              <h5 class="card-title" id="lavagemSimples">Lavagem Simples</h5>
               <p class="card-text">Lavagem mais rápida, onde prioriza a lataria do carro e os pneus ganham atenção
                 também, porém o motor fica de fora.</p>
-              <a href="../Pages/Agendamento.html" class="btn btn-primary" id="Btn">Agendar</a>
+              <a href="../Pages/Agendamento.html" class="btn btn-primary" id="Btn-lavagemsimples">Agendar</a>
             </div>
           </div>
         </div>
@@ -69,7 +69,7 @@
               <h5 class="card-title">Lavagem Completa</h5>
               <p class="card-text">Além dos itens da lavagem simples, o motor, a parte de baixo do veículo também é
                 lavado e o interior é aspirado. </p>
-              <a href="#" class="btn btn-primary" id="Btn">Agendar</a>
+              <a href="../Pages/Agendamento.html" class="btn btn-primary" id="Btn">Agendar</a>
             </div>
           </div>
         </div>
@@ -80,59 +80,59 @@
               <h5 class="card-title">Polimento de Pintura</h5>
               <p class="card-text">Processo estético empregado no veículo. A tinta danificada é removida para ser
                 empregado outro procedimento de pintura. </p>
-              <a href="#" class="btn btn-primary" id="Btn">Agendar</a>
+              <a href="../Pages/Agendamento.html" class="btn btn-primary" id="Btn">Agendar</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!---->
-    <br>
-    <br>
+ 
+  <br>
+  <br>
 
-    <div class="container text-center">
-      <div class="row align-items-center" id="Col">
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="../Assets/i4.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Higieninaçao Interna</h5>
-              <p class="card-text">No serviço há uma limpeza detalhada que inclui teto, estofado, painel, lateral de
-                portas, carpete e porta-malas.</p>
-              <a href="#" class="btn btn-primary" id="Btn">Agendar</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="../Assets/i9.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Hidratação de Couro</h5>
-              <p class="card-text">Consiste em um serviço que devolve umidade ao material, serve para conservar o
-                equipamento e garantir uma melhor estética.</p>
-              <a href="#" class="btn btn-primary" id="Btn">Agendar</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="../Assets/i8.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Polimento de Faróis</h5>
-              <p class="card-text">É um processo de limpeza das luzes dianteiras do veículo, busca revitalizar os faróis
-                deteriorados com o tempo, o que os deixa com um aspecto de novo. </p>
-              <a href="#" class="btn btn-primary" id="Btn">Agendar</a>
-            </div>
+  <div class="container text-center">
+    <div class="row align-items-center" id="Col">
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../Assets/i4.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Higieninaçao Interna</h5>
+            <p class="card-text">No serviço há uma limpeza detalhada que inclui teto, estofado, painel, lateral de
+              portas, carpete e porta-malas.</p>
+            <a href="../Pages/Agendamento.html" class="btn btn-primary" id="Btn">Agendar</a>
           </div>
         </div>
       </div>
-      <br>
-      <a href="Servico.html" id="LinkCard">Ver mais</a>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../Assets/i9.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Hidratação de Couro</h5>
+            <p class="card-text">Consiste em um serviço que devolve umidade ao material, serve para conservar o
+              equipamento e garantir uma melhor estética.</p>
+            <a href="../Pages/Agendamento.html" class="btn btn-primary" id="Btn">Agendar</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../Assets/i8.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Polimento de Faróis</h5>
+            <p class="card-text">É um processo de limpeza das luzes dianteiras do veículo, busca revitalizar os faróis
+              deteriorados com o tempo, o que os deixa com um aspecto de novo. </p>
+            <a href="../Pages/Agendamento.html" class="btn btn-primary" id="Btn">Agendar</a>
+          </div>
+        </div>
+      </div>
     </div>
+    <br>
+    <a href="Servico.html" id="LinkCard">Ver mais</a>
   </div>
-  <!---->
+  </div> -->
+
   <br>
-  <br>
+  <br><br><br><br><br> <br> <br> <br>
   <footer class="Footer">
 
     <br>
@@ -170,6 +170,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+  <script src="/js/servicos.js"></script>
+
 </body>
 
 </html>
