--- a/Pages/Agendamento.html
+++ b/Pages/Agendamento.html
@@ -58,7 +58,7 @@
               <p id="service"></p>
               <p id="service-data"></p>
               <p id="service-hora"></p>
-              <a href="https://wa.me/5579991212965" target="_blank" class="btn btn-primary" id="btn3">Agendar</a>
+              <a target="_blank" class="btn btn-primary" id="btn3">Agendar</a>
             </div>
 
           </div>
@@ -70,10 +70,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-  <script src="/js/lavagemsimplem.js"></script>
+  <script src="/js/servicos.js"></script>
   <script src="/js/agendamento.js"></script>
   <script src="/js/dataehora.js"></script>
-
+  <script src="/js/agendar.js"></script>
 </body>
 
 </html>
