--- a/Pages/Agendamento.html
+++ b/Pages/Agendamento.html
@@ -52,7 +52,7 @@
       <div class="col">
         <div class="p-3">
           <div class="card" id="Form2">
-            <h5 class="card-header" id="header">Detalhes</h5>
+            <h5 class="card-header" id="header"></h5>
             <div class="card-body">
               <p class="info-service" id="info_services">Informações do serviço:</p>
               <p id="service"></p>
