--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -23,7 +23,7 @@
         <div class="navbar-nav" id="NavLink">
           <a class="nav-link active" id="Link" aria-current="page" href="Index.html">Home</a>
           <a class="nav-link active" id="Link" href="Servico.html">Serviços</a>
-          <a class="nav-link active" id="Link" href="#">Fale Conosco</a>
+          <a class="nav-link active" id="Link" href="./Index.html#faleconosco">Fale Conosco</a>
         </div>
         <a class="navbar-brand" id="Link" href="../Pages/Login.html"><img src="../Assets/login.png" alt=""
             id="imgLogin"></a>
@@ -35,11 +35,11 @@
   <form class="row g-3 needs-validation" id="Form">
     <div class="col-md-6" id="label">
       <label for="nome" class="form-label">Email</label>
-      <input type="text" class="form-control" name="email" id="nome" placeholder="nome@gmail.com" maxlength="20"
+      <input type="text" class="form-control" name="email" id="nome" placeholder="Digite seu e-mail" maxlength="20"
         required>
       <br>
       <label for="cpf" class="form-label">Senha</label>
-      <input type="password" class="form-control" name="senha" id="cpf" placeholder="Ex. 99455612544" maxlength="11"
+      <input type="password" class="form-control" name="senha" id="cpf" placeholder="Digite sua senha" maxlength="11"
         pattern="[0-9]{11}" required>
       <br>
       <a href="../Pages/Cadastro.html">Faça o Cadastro</a>
