--- a/Pages/Cadastro.html
+++ b/Pages/Cadastro.html
@@ -23,7 +23,7 @@
         <div class="navbar-nav" id="NavLink">
           <a class="nav-link active" id="Link" aria-current="page" href="Index.html">Home</a>
           <a class="nav-link active" id="Link" href="Servico.html">Serviços</a>
-          <a class="nav-link active" id="Link" href="#">Fale Conosco</a>
+          <a class="nav-link active" id="Link" href="./Index.html#faleconosco">Fale Conosco</a>
         </div>
         <a class="navbar-brand" id="Link" href="../Pages/Login.html"><img src="../Assets/login.png" alt=""
             id="imgLogin"></a>
@@ -35,18 +35,19 @@
   <form class="row g-3 needs-validation" id="Form">
     <div class="col-md-6" id="label">
       <label for="nome" class="form-label">Nome</label>
-      <input type="text" class="form-control" name="nome" id="nome" placeholder="Erik Rafael" maxlength="20" required>
+      <input type="text" class="form-control" name="nome" id="nome" placeholder="Digite seu nome completo"
+        maxlength="20" required>
       <br>
       <label for="cpf" class="form-label">Número de Telefone</label>
       <input type="number" class="form-control" name="numTelefone" id="numTelefone" placeholder="Ex. 79999685200"
         maxlength="11" pattern="[0-9]{11}" required>
       <br>
       <label for="cpf" class="form-label">Email</label>
-      <input type="email" class="form-control" name="emaill" id="email" placeholder="nome@gmail.com" maxlength="50"
+      <input type="email" class="form-control" name="emaill" id="email" placeholder="Informe um e-mail" maxlength="50"
         required>
       <br>
       <label for="cpf" class="form-label">Senha</label>
-      <input type="password" class="form-control" name="senha" id="senha" placeholder="Ex. 99455612544" maxlength="11"
+      <input type="password" class="form-control" name="senha" id="senha" placeholder="Informe uma senha" maxlength="11"
         pattern="[0-9]{11}" required>
       <br>
       <a href="../Pages/Login.html">Faça Login</a>
