--- a/Pages/Cadastro.html
+++ b/Pages/Cadastro.html
@@ -9,7 +9,68 @@
   <link href="../Style/styleCdastro.css" rel="stylesheet">
   <title>Cadastro</title>
 </head>
+<style>
+  .hidden{
+    display: none;
+  }
+</style>
+<script>
+  var dados = {
+    nome:"",
+    email: "",
+    numero: "",
+    senha: ""
+  };
+  function showAlert(html, msg){
+    var div = document.getElementById(html);
+    if(div.classList.contains('hidden'))
+      div.classList.toggle('hidden');
 
+    div.innerHTML = msg;
+
+    setTimeout(function () {
+      div.classList.toggle('hidden');
+      document.location.href = "./Servico.html"
+    }, 5000);
+  }
+  function fazerRequisicao() {
+      event.preventDefault();
+      var dados = {
+        senha: document.getElementById("nome").value,
+        telefone: document.getElementById("telefone").value,
+        email: document.getElementById("email").value,
+        senha: document.getElementById("senha").value,
+      };
+      var configuracao = {
+        method: 'POST', // Método da solicitação (no caso, POST)
+        headers: {
+            'Content-Type': 'application/json' // Tipo de conteúdo no corpo (JSON)
+        },
+        body: JSON.stringify(dados) // Corpo da solicitação no formato JSON
+      };
+      const onSuccess = response => {
+        localStorage['Auth'] = JSON.stringify("logado");
+        response.json().then(jsonResponse => showAlert('div-sucess', jsonResponse));
+      }
+
+      const onFailure = response => {
+        response.json().then(jsonResponse => showAlert('div-error', jsonResponse));
+        return response;
+      }
+
+      fetch('http://localhost:3000/api/create', configuracao)
+          .then(response => {
+              if (!response.ok) {
+                  throw response;
+              }
+              return response; // ou response.text() se a resposta não for JSON
+          })
+          .then(onSuccess, onFailure)
+          .catch(err => { 
+            console.error(err);
+          })
+  }
+</script>
 <body class="body">
   <nav class="navbar navbar-expand-lg " id="Nav">
     <div class="container-fluid">
@@ -30,6 +91,12 @@
       </div>
     </div>
   </nav>
+  <div id="div-sucess" class="alert alert-success hidden" role="alert">
+    A simple success alert—check it out!
+  </div>
+  <div id="div-error" class="alert alert-danger hidden" role="alert">
+    A simple danger alert—check it out!
+  </div>
   <br>
   <br>
   <form class="row g-3 needs-validation" id="Form">
@@ -39,7 +106,7 @@
         maxlength="20" required>
       <br>
       <label for="cpf" class="form-label">Número de Telefone</label>
-      <input type="number" class="form-control" name="numTelefone" id="numTelefone" placeholder="Ex. 79999685200"
+      <input type="number" class="form-control" name="numTelefone" id="telefone" placeholder="Ex. 79999685200"
         maxlength="11" pattern="[0-9]{11}" required>
       <br>
       <label for="cpf" class="form-label">Email</label>
@@ -48,13 +115,13 @@
       <br>
       <label for="cpf" class="form-label">Senha</label>
       <input type="password" class="form-control" name="senha" id="senha" placeholder="Informe uma senha" maxlength="11"
-        pattern="[0-9]{11}" required>
+         required>
       <br>
       <a href="../Pages/Login.html">Faça Login</a>
     </div>
 
     <div class="col-12">
-      <button class="btn btn-outline-dark" type="submit" id="btn2">Cadastrar</button>
+      <button class="btn btn-outline-dark"  id="btn2" onclick="fazerRequisicao()">Cadastrar</button>
     </div>
   </form>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
