--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -10,6 +10,12 @@
   <title>Lava Jato</title>
 </head>
 
+<script>
+  function logout(){
+    debugger;
+    localStorage.removeItem("Auth");
+  }
+</script>
 <body>
   <nav class="navbar navbar-expand-lg " id="Nav">
     <div class="container-fluid">
@@ -27,6 +33,7 @@
         </div>
         <a class="navbar-brand" id="Link" href="../Pages/Login.html"><img src="../Assets/login.png" alt=""
             id="imgLogin"></a>
+        <a class="navbar-brand" id="Link" onclick="logout()">Logout</a>
       </div>
     </div>
   </nav>
