--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -11,11 +11,12 @@
 </head>
 
 <script>
-  function logout(){
+  function logout() {
     debugger;
     localStorage.removeItem("Auth");
   }
 </script>
+
 <body>
   <nav class="navbar navbar-expand-lg " id="Nav">
     <div class="container-fluid">
@@ -33,7 +34,7 @@
         </div>
         <a class="navbar-brand" id="Link" href="../Pages/Login.html"><img src="../Assets/login.png" alt=""
             id="imgLogin"></a>
-        <a class="navbar-brand" id="Link" onclick="logout()">Logout</a>
+        <!-- <a class="navbar-brand-logout" id="Link" onclick="logout()">Logout</a> -->
       </div>
     </div>
   </nav>
