--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -32,7 +32,7 @@
           <a class="nav-link active" id="Link" href="Servico.html">Serviços</a>
           <a class="nav-link active" id="Link" href="#faleconosco">Fale Conosco</a>
         </div>
-        <a class="navbar-brand" id="Link" href="../Pages/Login.html"><img src="../Assets/login.png" alt=""
+        <a class="navbar-brand" id="Link" href="../Pages/Login.html"><img src="../Assets/login.png" alt="Login"
             id="imgLogin"></a>
         <!-- <a class="navbar-brand-logout" id="Link" onclick="logout()">Logout</a> -->
       </div>
