--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -10,66 +10,68 @@
   <title>Login</title>
 </head>
 <style>
-  .hidden{
+  .hidden {
     display: none;
   }
 </style>
 <script>
+
   var dados = {
     email: "",
     senha: ""
   };
-  function showAlert(html, msg){
+  function showAlert(html, msg) {
     var div = document.getElementById(html);
-    if(div.classList.contains('hidden'))
+    if (div.classList.contains('hidden'))
       div.classList.toggle('hidden');
 
     div.innerHTML = msg;
 
-    if(html != 'div-error'){
+    if (html != 'div-error') {
       setTimeout(function () {
         div.classList.toggle('hidden');
         document.location.href = "./Servico.html"
-      }, 5000);
+      }, 2000);
     }
   }
   function fazerRequisicao() {
-      event.preventDefault();
-      var dados = {
-        email: document.getElementById("email").value,
-        senha: document.getElementById("senha").value
-      };
-      var configuracao = {
-        method: 'POST', // Método da solicitação (no caso, POST)
-        headers: {
-            'Content-Type': 'application/json' // Tipo de conteúdo no corpo (JSON)
-        },
-        body: JSON.stringify(dados) // Corpo da solicitação no formato JSON
-      };
-      const onSuccess = response => {
-        localStorage['Auth'] = JSON.stringify("logado");
-        response.json().then(jsonResponse => showAlert('div-sucess', jsonResponse));
-      }
+    event.preventDefault();
+    var dados = {
+      email: document.getElementById("email").value,
+      senha: document.getElementById("senha").value
+    };
+    var configuracao = {
+      method: 'POST', // Método da solicitação (no caso, POST)
+      headers: {
+        'Content-Type': 'application/json' // Tipo de conteúdo no corpo (JSON)
+      },
+      body: JSON.stringify(dados) // Corpo da solicitação no formato JSON
+    };
+    const onSuccess = response => {
+      localStorage['Auth'] = JSON.stringify("logado");
+      response.json().then(jsonResponse => showAlert('div-sucess', jsonResponse));
+    }
 
-      const onFailure = response => {
-        response.json().then(jsonResponse => showAlert('div-error', jsonResponse));
-        return response;
-      }
+    const onFailure = response => {
+      response.json().then(jsonResponse => showAlert('div-error', jsonResponse));
+      return response;
+    }
 
-      fetch('http://localhost:3000/api/login', configuracao)
-          .then(response => {
-              if (!response.ok) {
-                  throw response;
-              }
-              return response; // ou response.text() se a resposta não for JSON
-          })
-          .then(onSuccess, onFailure)
-          .catch(err => { 
-            console.error(err);
-          })
+    fetch('http://localhost:3000/api/login', configuracao)
+      .then(response => {
+        if (!response.ok) {
+          throw response;
+        }
+        return response; // ou response.text() se a resposta não for JSON
+      })
+      .then(onSuccess, onFailure)
+      .catch(err => {
+        console.error(err);
+      })
   }
 
 </script>
+
 <body class="body">
   <nav class="navbar navbar-expand-lg " id="Nav">
     <div class="container-fluid">
@@ -101,12 +103,11 @@
   <form class="row g-3 needs-validation" id="Form">
     <div class="col-md-6" id="label">
       <label for="email" class="form-label">Email</label>
-      <input type="text" class="form-control" name="email" id="email" placeholder="Digite seu e-mail" 
-        required>
+      <input type="text" class="form-control" name="email" id="email" placeholder="Digite seu e-mail" required>
       <br>
       <label for="senha" class="form-label">Senha</label>
       <input type="password" class="form-control" name="senha" id="senha" placeholder="Digite sua senha" maxlength="11"
-         required>
+        required>
       <br>
       <a href="../Pages/Cadastro.html">Faça o Cadastro</a>
     </div>
