--- a/Pages/Gerenciamento.html
+++ b/Pages/Gerenciamento.html
@@ -28,12 +28,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav" id="NavLink">
-          <a class="nav-link active" id="Link" aria-current="page" href="Index.html">Home</a>
+          <!-- <a class="nav-link active" id="Link" aria-current="page" href="Index.html">Home</a>
           <a class="nav-link active" id="Link" href="Servico.html">Serviços</a>
-          <a class="nav-link active" id="Link" href="#faleconosco">Fale Conosco</a>
+          <a class="nav-link active" id="Link" href="#faleconosco">Fale Conosco</a> -->
         </div>
-        <a class="navbar-brand" id="Link" href="../Pages/Login.html"><img src="../Assets/login.png" alt=""
-            id="imgLogin"></a>
+        <a class="navbar-brand" id="Link" href="#"><img src="../Assets/logout2.png" alt="Logout" id="logoutBtn"></a>
       </div>
     </div>
   </nav>
@@ -46,7 +45,7 @@
     <div class="col" style="width: 50%;">
       <div class="container1">
         <div class="card" id="CardTitle">
-          <h5 class="card-title" id="TitleCard">Pendentes:</h5>
+          <h5 class="card-title" id="TitleCard" align="center">Pendentes</h5>
         </div>
 
         <div class="card" id="CardPendentes">
@@ -82,7 +81,7 @@
     <div class="col" style="width: 30%;">
       <div class="container2">
         <div class="card" id="CardTitle">
-          <h5 class="card-title" id="TitleCard">Finalizados:</h5>
+          <h5 class="card-title" id="TitleCard" align="center">Finalizados</h5>
         </div>
 
         <div class="card" id="CardPendentes">
@@ -115,7 +114,7 @@
   <!---->
 
   <h2 id="Title2">Metricas Diárias</h2>
-<!---->
+  <!---->
   <div class="container" id="ContainerProgresso">
     <div class="row">
       <div class="col">
@@ -168,33 +167,33 @@
       </div>
     </div>
   </div>
-<br>
-<br>
+  <br>
+  <br>
 
-<footer class="Footer">
-  <div class="container px-4">
-    <div class="row gx-5">
-      <div class="col">
-        <img src="../Assets/LG.png" id="imgFooter" alt="">
+  <footer class="Footer">
+    <div class="container px-4">
+      <div class="row gx-5">
+        <div class="col">
+          <img src="../Assets/LG.png" id="imgFooter" alt="">
+        </div>
       </div>
-      </div>
-  </div>
+    </div>
 
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-</footer>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-  <script src="/js/servicos.js"></script>
+  <script src="../utils/logout.js"></script>
 
 </body>
 
